--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,6 @@ recursive-include docs .py
 recursive-include sitegate/locale *
 recursive-include sitegate/migrations .py
 recursive-include sitegate/templates .html
-recursive-include sitegate/flows .py
+recursive-include sitegate/signup_flows .py
 recursive-include sitegate/templatetags .py
 recursive-include sitegate/management .py
