Implemented basic sign in flows.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,5 +8,6 @@ recursive-include sitegate/locale *
 recursive-include sitegate/migrations .py
 recursive-include sitegate/templates .html
 recursive-include sitegate/signup_flows .py
+recursive-include sitegate/signin_flows .py
 recursive-include sitegate/templatetags .py
 recursive-include sitegate/management .py
