--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include README.rst
 include LICENSE
 include CHANGELOG
+include AUTHORS
 include docs/Makefile
 recursive-include docs .rst
 recursive-include docs .py
