--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py27-django14, py27-django15, py33-django15
 deps = Django>=1.4,<1.5
 
 [django15]
-deps = https://www.djangoproject.com/download/1.5c2/tarball/
+deps = Django>=1.5,<1.6
 
 [testenv]
 commands = python sitegate/runtests.py
