--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-django14, py27-django15, py33-django15, py27-django16, py33-django16, py34-django15, py34-django16
+envlist = py27-django14, py27-django15, py3-django15, py27-django16, py3-django16
 
 [django14]
 deps = Django>=1.4,<1.5
@@ -25,18 +25,10 @@ deps = {[django15]deps}
 basepython = python2.7
 deps = {[django16]deps}
 
-[testenv:py33-django15]
-basepython = python3.3
+[testenv:py3-django15]
+basepython = python3
 deps = {[django15]deps}
 
-[testenv:py33-django16]
-basepython = python3.3
-deps = {[django16]deps}
-
-[testenv:py34-django15]
-basepython = python3.4
-deps = {[django15]deps}
-
-[testenv:py34-django16]
-basepython = python3.4
+[testenv:py3-django16]
+basepython = python3
 deps = {[django16]deps}
