--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,6 @@
 [tox]
-envlist = py27-django14, py27-django15, py3-django15, py27-django16, py3-django16
+envlist = py27-django15, py3-django15, py27-django16, py3-django16
 
-[django14]
-deps = Django>=1.4,<1.5
 
 [django15]
 deps = Django>=1.5,<1.6
@@ -13,9 +11,6 @@ deps = Django>=1.6,<1.7
 [testenv]
 commands = python sitegate/runtests.py
 
-[testenv:py27-django14]
-basepython = python2.7
-deps = {[django14]deps}
 
 [testenv:py27-django15]
 basepython = python2.7
