--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,12 @@
 [tox]
-envlist = py27-django15, py3-django15, py27-django16, py3-django16
+envlist =
+    py27-django15,
+    py27-django16,
+    py27-django17,
+
+    py3-django15,
+    py3-django16,
+    py3-django17
 
 
 [django15]
@@ -7,6 +14,10 @@ deps = Django>=1.5,<1.6
 
 [django16]
 deps = Django>=1.6,<1.7
+
+[django17]
+deps = Django>=1.7,<1.8
+
 
 [testenv]
 commands = python sitegate/runtests.py
@@ -20,6 +31,10 @@ deps = {[django15]deps}
 basepython = python2.7
 deps = {[django16]deps}
 
+[testenv:py27-django17]
+basepython = python2.7
+deps = {[django17]deps}
+
 [testenv:py3-django15]
 basepython = python3
 deps = {[django15]deps}
@@ -27,3 +42,7 @@ deps = {[django15]deps}
 [testenv:py3-django16]
 basepython = python3
 deps = {[django16]deps}
+
+[testenv:py3-django17]
+basepython = python3
+deps = {[django17]deps}
