--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 include = sitegate/*
-omit = sitegate/migrations/*, sitegate/south_migrations/*, sitegate/runtests.py, sitegate/tests.py, sitegate/config.py
+omit = sitegate/migrations/*, sitegate/south_migrations/*, sitegate/runtests.py, sitegate/tests.py, sitegate/config.py, sitegate/admin.py
