test are now also run for CustomUser without 'username' field

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,7 @@
 [tox]
 envlist =
-    py27-django15,
-    py27-django16,
-    py27-django17,
-    py27-django18,
-
-    py3-django15,
-    py3-django16,
-    py3-django17,
-    py3-django18
+    {py27,py3}-django{15,16,17,18},
+    {py27,py3}-django{15,16,17,18}-customuser
 
 
 [django15]
@@ -59,3 +52,52 @@ deps = {[django17]deps}
 [testenv:py3-django18]
 basepython = python3
 deps = {[django18]deps}
+
+
+[testenv:py27-django15-customuser]
+basepython = python2.7
+deps = {[django15]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py27-django16-customuser]
+basepython = python2.7
+deps = {[django16]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py27-django17-customuser]
+basepython = python2.7
+deps = {[django17]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py27-django18-customuser]
+basepython = python2.7
+deps = {[django18]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py3-django15-customuser]
+basepython = python3
+deps = {[django15]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py3-django16-customuser]
+basepython = python3
+deps = {[django16]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py3-django17-customuser]
+basepython = python3
+deps = {[django17]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py3-django18-customuser]
+basepython = python3
+deps = {[django18]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
