travis should run tests for custom AUTH_USER_MODEL

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 
+sudo: false
+
 python:
   - 3.4
   - 3.3
@@ -10,11 +12,15 @@ env:
   - DJANGO="Django>=1.7,<1.8"
   - DJANGO="Django>=1.6,<1.7"
   - DJANGO="Django>=1.5,<1.6"
-  
+  - DJANGO="Django>=1.8,<1.9" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+  - DJANGO="Django>=1.7,<1.8" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+  - DJANGO="Django>=1.6,<1.7" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+  - DJANGO="Django>=1.5,<1.6" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
 install:
   - pip install -U coverage coveralls django-etc $DJANGO
 
-  
+
 script: coverage run -a --source=sitegate sitegate/runtests.py
 
 matrix:
