--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    {py27,py3}-django{15,16,17,18},
-    {py27,py3}-django{15,16,17,18}-customuser
+    {py27,py3}-django{15,16,17,18}{,-customuser}
 
 
 [django15]
