QA configs updated.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py3}-django{15,16,17,18}{,-customuser}
+    {py27,py3}-django{15,16,17,18,19}{,-customuser}
 
 
 [django15]
@@ -14,6 +14,9 @@ deps = Django>=1.7,<1.8
 
 [django18]
 deps = Django>=1.8,<1.9
+
+[django19]
+deps = Django>=1.9,<1.10
 
 
 [testenv]
@@ -36,6 +39,10 @@ deps = {[django17]deps}
 basepython = python2.7
 deps = {[django18]deps}
 
+[testenv:py27-django19]
+basepython = python2.7
+deps = {[django19]deps}
+
 [testenv:py3-django15]
 basepython = python3
 deps = {[django15]deps}
@@ -51,6 +58,10 @@ deps = {[django17]deps}
 [testenv:py3-django18]
 basepython = python3
 deps = {[django18]deps}
+
+[testenv:py3-django19]
+basepython = python3
+deps = {[django19]deps}
 
 
 [testenv:py27-django15-customuser]
@@ -77,6 +88,12 @@ deps = {[django18]deps}
 setenv =
     DJANGO_AUTH_USER_MODEL=auth.CustomUser
 
+[testenv:py27-django19-customuser]
+basepython = python2.7
+deps = {[django19]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
 [testenv:py3-django15-customuser]
 basepython = python3
 deps = {[django15]deps}
@@ -98,5 +115,11 @@ setenv =
 [testenv:py3-django18-customuser]
 basepython = python3
 deps = {[django18]deps}
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py3-django19-customuser]
+basepython = python3
+deps = {[django19]deps}
 setenv =
     DJANGO_AUTH_USER_MODEL=auth.CustomUser
