--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,15 @@ matrix:
      env: DJANGO="Django>=1.6,<1.7"
    - python: 3.5
      env: DJANGO="Django>=1.5,<1.6"
+   - python: 3.5
+     env: DJANGO="Django>=1.7,<1.8" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+   - python: 3.5
+     env: DJANGO="Django>=1.6,<1.7" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+   - python: 3.5
+     env: DJANGO="Django>=1.5,<1.6" DJANGO_AUTH_USER_MODEL=auth.CustomUser
 
    - python: 3.4
      env: DJANGO="Django>=1.5,<1.6"
-   - python: 3.4
-     env: DJANGO="Django>=1.4,<1.5"
 
    - python: 3.3
      env: DJANGO="Django>=1.9.0,<1.10"
