--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,8 @@ matrix:
    - python: 3.3
      env: DJANGO="Django>=1.9.0,<1.10"
    - python: 3.3
+     env: DJANGO="Django>=1.9.0,<1.10" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+   - python: 3.3
      env: DJANGO="Django>=1.5,<1.6"
 
 after_success:
