--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,13 @@ python:
   - 2.7
 
 env:
-  - DJANGO="Django>=1.9.0,<1.10"
+  - DJANGO="Django>=1.10,<1.11"
+  - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.8,<1.9"
   - DJANGO="Django>=1.7,<1.8"
   - DJANGO="Django>=1.6,<1.7"
   - DJANGO="Django>=1.5,<1.6"
-  - DJANGO="Django>=1.9.0,<1.10" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+  - DJANGO="Django>=1.9,<1.10" DJANGO_AUTH_USER_MODEL=auth.CustomUser
   - DJANGO="Django>=1.8,<1.9" DJANGO_AUTH_USER_MODEL=auth.CustomUser
   - DJANGO="Django>=1.7,<1.8" DJANGO_AUTH_USER_MODEL=auth.CustomUser
   - DJANGO="Django>=1.6,<1.7" DJANGO_AUTH_USER_MODEL=auth.CustomUser
@@ -46,9 +47,13 @@ matrix:
      env: DJANGO="Django>=1.5,<1.6"
 
    - python: 3.3
-     env: DJANGO="Django>=1.9.0,<1.10"
+     env: DJANGO="Django>=1.10,<1.11"
    - python: 3.3
-     env: DJANGO="Django>=1.9.0,<1.10" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+     env: DJANGO="Django>=1.10,<1.11" DJANGO_AUTH_USER_MODEL=auth.CustomUser
+   - python: 3.3
+     env: DJANGO="Django>=1.9,<1.10"
+   - python: 3.3
+     env: DJANGO="Django>=1.9,<1.10" DJANGO_AUTH_USER_MODEL=auth.CustomUser
    - python: 3.3
      env: DJANGO="Django>=1.5,<1.6"
 
