--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,13 +3,13 @@ include LICENSE
 include CHANGELOG
 include AUTHORS
 include docs/Makefile
-recursive-include docs .rst
-recursive-include docs .py
+recursive-include docs *.rst
+recursive-include docs *.py
 recursive-include sitegate/locale *
-recursive-include sitegate/migrations .py
-recursive-include sitegate/templates .html
-recursive-include sitegate/signup_flows .py
-recursive-include sitegate/signin_flows .py
-recursive-include sitegate/templatetags .py
-recursive-include sitegate/management .py
-recursive-include sitegate/south_migrations .py
+recursive-include sitegate/migrations *.py
+recursive-include sitegate/templates *.html
+recursive-include sitegate/signup_flows *.py
+recursive-include sitegate/signin_flows *.py
+recursive-include sitegate/templatetags *.py
+recursive-include sitegate/management *.py
+recursive-include sitegate/south_migrations *.py
