QA updated for Py3.6 and Django 1.11

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,11 @@
 [tox]
-envlist = py{27,32,33,34}-django{15,16,17,18,19,110}{,-customuser}
-          py{35}-django{18,19,110}{,-customuser}
+envlist = py{27,32,33,34}-django{15,16,17,18,19,110,111}{,-customuser}
+          py{35,36}-django{18,19,110,111}{,-customuser}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
 
 [testenv]
-basepython =
-    py27: python2.7
-    py32: python3.2
-    py33: python3.3
-    py34: python3.4
-    py35: python3.5
-
 commands = python sitegate/runtests.py
 
 deps =
@@ -22,6 +15,7 @@ deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<1.12
 
 
 [testenv:py27-django15-customuser]
@@ -44,6 +38,14 @@ setenv =
 setenv =
     DJANGO_AUTH_USER_MODEL=auth.CustomUser
 
+[testenv:py27-django110-customuser]
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py27-django111-customuser]
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
 [testenv:py3-django15-customuser]
 setenv =
     DJANGO_AUTH_USER_MODEL=auth.CustomUser
@@ -61,5 +63,13 @@ setenv =
     DJANGO_AUTH_USER_MODEL=auth.CustomUser
 
 [testenv:py3-django19-customuser]
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py3-django110-customuser]
+setenv =
+    DJANGO_AUTH_USER_MODEL=auth.CustomUser
+
+[testenv:py3-django111-customuser]
 setenv =
     DJANGO_AUTH_USER_MODEL=auth.CustomUser
