--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = py{27,32,33,34}-django{15,16,17,18,19,110,111}{,-customuser}
-          py{35,36}-django{18,19,110,111}{,-customuser}
+envlist = py{27,34}-django{17,18,19,110,111}
+          py{35,36}-django{18,19,110,111}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
@@ -9,67 +9,8 @@ skip_missing_interpreters = True
 commands = python sitegate/runtests.py
 
 deps =
-    django15: Django>=1.5,<1.6
-    django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
-
-
-[testenv:py27-django15-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py27-django16-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py27-django17-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py27-django18-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py27-django19-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py27-django110-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py27-django111-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py3-django15-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py3-django16-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py3-django17-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py3-django18-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py3-django19-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py3-django110-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
-
-[testenv:py3-django111-customuser]
-setenv =
-    DJANGO_AUTH_USER_MODEL=auth.CustomUser
