--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: python
 
-sudo: false
-
 python:
   - 3.6
   - 3.5
@@ -9,18 +7,18 @@ python:
   - 2.7
 
 env:
+  - DJANGO="Django>=2.1,<2.2"
   - DJANGO="Django>=2.0,<2.1"
   - DJANGO="Django>=1.11,<1.12"
   - DJANGO="Django>=1.10,<1.11"
   - DJANGO="Django>=1.9,<1.10"
-  - DJANGO="Django>=1.8,<1.9"
+  - DJANGO="Django>=1.8.6,<1.9"
   - DJANGO="Django>=1.7,<1.8"
 
 install:
-  - pip install -U coverage coveralls django-etc $DJANGO
+  - pip install -U pytest pytest-djangoapp setuptools coverage coveralls $DJANGO
 
-
-script: coverage run -a --source=sitegate sitegate/runtests.py
+script: coverage run -a --source=sitegate setup.py test
 
 matrix:
 
@@ -31,9 +29,14 @@ matrix:
    - python: 3.5
      env: DJANGO="Django>=1.7,<1.8"
 
+   - python: 3.4
+     env: DJANGO="Django>=2.1,<2.2"
+
+   - python: 2.7
+     env: DJANGO="Django>=2.1,<2.2"
+
    - python: 2.7
      env: DJANGO="Django>=2.0,<2.1"
-
 
 after_success:
   coveralls
