--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
 envlist = py{27,34}-django{17,18,19,110,111}
-          py{35,36}-django{18,19,110,111,200}
+          py{35,36}-django{18,19,110,111,200,210}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
 
 [testenv]
-commands = python sitegate/runtests.py
+commands = python setup.py test
 
 deps =
     django17: Django>=1.7,<1.8
@@ -15,3 +15,5 @@ deps =
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
     django200: Django>=2.0,<2.1
+    django210: Django>=2.1,<2.2
+
