--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   - DJANGO="Django>=1.7,<1.8"
 
 install:
-  - pip install -U pytest pytest-djangoapp setuptools coverage coveralls $DJANGO
+  - pip install -U coverage coveralls $DJANGO
 
 script: coverage run -a --source=sitegate setup.py test
 
